@@ -1,3 +1,8 @@
+1998-10-18  Tanaka Akira  <morioka@jaist.ac.jp>
+
+	* broken.el (check-broken-facility): Also use compile time
+	description.
+
 1998-10-18  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* APEL: Version 9.4 was released.
